Closed Bug 1059242 Opened 10 years ago Closed 10 years ago

Horizontal Scrollbar moves page to top, not horizontally

Categories

(Core :: General, defect)

34 Branch
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla34

People

(Reporter: alreiten, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:34.0) Gecko/20100101 Firefox/34.0 (Beta/Release) Build ID: 20140826030203 Steps to reproduce: STR: Create new profile with Firefox Nightly, 20140826030203. Go to any webpage that is too wide to be complete seen and thus has a horizontal scrollbar. (One can be created by zooming in, if necessary, on any page.) Scroll vertically down part way through the page. Click on the horizontal scrollbar. Actual results: Actual results: Firefox scrolls back up to the top of the page. Expected results: Expected Results: Horizontal scrollbar should result in horizontal scrolling.
Hardware: x86 → x86_64
I can reproduce this on Windows 8.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Product: Firefox → Core
This tentatively looks like bug 957445...
Blocks: 957445
Confirmed by checking against inbound. Mats, can you take a look?
Flags: needinfo?(mats)
And , Dragging thumb of vertical scrollbar also trigger a reset of the horizontal scroll position.
I can confirm that bug 957445 caused this regression, using a local build. Part 2 to be precise.
Flags: needinfo?(mats)
I have reproduced on OSX 10.9 and am investigating the cause.
kip, I have debugged this and this appears to fix it: static nsRect GetOnePixelRangeAroundPoint(nsPoint aPoint, bool aIsHorizontal) { - nsRect allowedRange; + nsRect allowedRange(aPoint, nsSize()); nscoord halfPixel = nsPresContext::CSSPixelsToAppUnits(0.5f); I can do some more testing locally and then let you review it? (feel free to test it on OSX, I'm on Linux)
Attached patch fixSplinter Review
Assignee: nobody → mats
Attachment #8480037 - Flags: review?(kgilbert)
Attachment #8480037 - Flags: review?(kgilbert) → review+
Flags: in-testsuite?
OS: Windows 7 → All
Hardware: x86_64 → All
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
Flags: qe-verify+
Reproduced with Nightly 2014-08-27 on Windows 7 x64. Verified as fixed with Firefox 34 beta 7 (Build ID: 20141106201515) on Mac OS X 10.9.5, Windows 7 x64 and Linux 14.04 x32.
Status: RESOLVED → VERIFIED
Moving from Core::Untriaged to Core::General https://bugzilla.mozilla.org/show_bug.cgi?id=1407598
Component: Untriaged → General
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: