Bug 1059242 - Initialize |allowedRange| with aPoint and a distance of zero in both directions (otherwise we'll return zero in the non-scrolled direction and reset that scroll position). r=kip